--- a/app/assets/stylesheets/bootstrap.css.erb
+++ b/app/assets/stylesheets/bootstrap.css.erb
@@ -684,7 +684,7 @@ hr {
 small,
 .small {
   font-size: 80%;
-  font-family: Gotham;
+  font-family: Gotham-BookIta;
 }
 
 mark,
@@ -2761,13 +2761,13 @@ fieldset[disabled] a.btn {
 
 .btn-primary {
   color: #fff;
-  background: linear-gradient(to bottom right, #00b3ed, #0275d8);
+  background: #0275d8;
   border-color: #0275d8;
 }
 
 .btn-primary:hover {
   color: #fff;
-  background: linear-gradient(to bottom right, #0275d8, #00b3ed);
+  background: #025aa5;
   border-color: #01549b;
 }
 
@@ -2946,6 +2946,7 @@ fieldset[disabled] a.btn {
   background-image: none;
   background-color: transparent;
   /*border-color: #0275d8;*/
+  height: 100%;
 }
 
 .btn-outline-primary:hover {
@@ -2953,6 +2954,7 @@ fieldset[disabled] a.btn {
   background-color: white;
   /*border-color: white;*/
   /*box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);*/
+  height: 100%;
 }
 
 .btn-outline-primary:focus, .btn-outline-primary.focus {
@@ -3970,7 +3972,7 @@ tbody.collapse.show {
 .nav-pills .nav-item.show .nav-link {
   color: #fff;
   cursor: default;
-  background: linear-gradient(to bottom right, #00b3ed, #0275d8);
+  background: #0275d8;
 }
 
 .nav-fill .nav-item {
@@ -3998,7 +4000,7 @@ tbody.collapse.show {
 }
 
 .navbar {
-  position: absolute;
+  position: relative;
   left: 0;
   right: 0;
   z-index: 1;
@@ -4011,7 +4013,6 @@ tbody.collapse.show {
   -webkit-flex-direction: column;
       -ms-flex-direction: column;
           flex-direction: column;
-  padding: 0.5rem 1rem;
 }
 
 .navbar-brand {
@@ -4976,7 +4977,7 @@ a.badge:focus, a.badge:hover {
 }
 
 .badge-primary {
-  background: linear-gradient(to bottom right, #00b3ed, #0275d8);
+  background: #0275d8;
 }
 
 .badge-primary[href]:focus, .badge-primary[href]:hover {
@@ -5281,7 +5282,7 @@ a.badge:focus, a.badge:hover {
 .list-group-item.active {
   z-index: 2;
   color: #fff;
-  background: linear-gradient(to bottom right, #00b3ed, #0275d8);
+  background: #0275d8;
   border-color: #0275d8;
 }
 
@@ -6239,7 +6240,7 @@ a.bg-inverse:focus, a.bg-inverse:hover {
 }
 
 .rounded {
-  border-radius: 0.25rem;
+  border-radius: 0.75rem;
 }
 
 .rounded-top {
