--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,7 +3,7 @@
     <hr>
     <div class="row">
       <div class="col">
-        <p>Faithful Word Baptist Church 2017<br><%= link_to "Privacy Policy", privacypolicy_path %> / <%= link_to "Terms and Conditions", termsandconditions_path %></p>
+        <p>Faithful Word Baptist Church 2017<br><%= link_to "Privacy Policy / Terms and Conditions", privacyandterms_path %></p>
       </div>
       <div class="col">
         <p class="text-right">Phone: (602) 456-1049<br>E-mail: <%= mail_to "faithfulword1@gmail.com" %></p>
