--- a/app/views/pages/ourpastor.html.erb
+++ b/app/views/pages/ourpastor.html.erb
@@ -50,9 +50,13 @@
             <div class="col">
               <div class="text-center">
                 <h3>Pastor Anderson on social networking sites:</h3>
-                <a href="https://www.facebook.com/pastorstevenanderson"><img style="width: 55px; height: auto" src="assets/icons/facebook.svg"></a>
+                <%= link_to "https://www.facebook.com/Faithful-Word-Baptist-Church-183465927963/", class: "pr-1", target: "_blank" do %>
+                  <%= image_tag "FACEBOOK.svg", height: '55' %>
+                <% end %>
+                <%= link_to "https://www.youtube.com/user/sanderson1611", class: "pr-1", target: "_blank" do %>
+                  <%= image_tag "YOUTUBE.svg", height: '55' %>
+                <% end %>
                 <a href="https://twitter.com/sanderson1611"><img style="width: 55px; height: auto" src="assets/icons/twitter.svg"></a>
-                <a href="https://www.youtube.com/user/sanderson1611"><img style="width: 55px; height: auto" src="assets/icons/youtube.svg"></a>
                 <a href="http://sanderson1611.blogspot.com/"><img style="width: 55px; height: auto" src="assets/icons/blogger.svg"></a>
               </div>
               <blockquote class="blockquote">
