--- a/app/views/shared/_banner.erb
+++ b/app/views/shared/_banner.erb
@@ -1,3 +1,5 @@
-<div id="banner-img">
-    <%= image_tag "group.jpg", width: '100%', height: 'auto', alt: "Faithful Word Baptist Church" %>
+<div class="container">
+  <div id="banner-img">
+    <%= image_tag "group.jpg", width: '100%', height: 'auto', alt: "Faithful Word Baptist Church", class: "rounded" %>
+  </div>
 </div>
