--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -12,7 +12,7 @@
       <div id="container-event">
         <%= render @events %>
       </div>
-      <%= form_for @event, remote: true do |f| %>
+      <%= form_for @event do |f| %>
         <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog">
           <div class="modal-dialog" role="document">
             <div class="modal-content">
