--- a/app/assets/stylesheets/bootstrap.css.erb
+++ b/app/assets/stylesheets/bootstrap.css.erb
@@ -2729,7 +2729,7 @@ select.form-control-lg:not([size]):not([multiple]), .input-group-lg > select.for
   border: 1px solid transparent;
   padding: 0.5rem 1rem;
   font-size: 1rem;
-  /*border-radius: 0.25rem;*/
+  border-radius: 0.25rem;
   -webkit-transition: all 0.2s ease-in-out;
   -o-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
@@ -2940,21 +2940,16 @@ fieldset[disabled] a.btn {
 }
 
 .btn-outline-primary {
-  color: white;
-  -webkit-filter: drop-shadow( 0 1px 3px rgba(0,0,0,0.12) );
-          filter: drop-shadow( 0 1px 2px rgba(0,0,0,0.24) );
-  background-image: none;
+  color: #0275d8;
   background-color: transparent;
-  /*border-color: #0275d8;*/
-  height: 100%;
+  background-image: none;
+  border-color: #0275d8;
 }
 
 .btn-outline-primary:hover {
-  color: #0275d8;
-  background-color: white;
-  /*border-color: white;*/
-  /*box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);*/
-  height: 100%;
+  color: #fff;
+  background-color: #0275d8;
+  border-color: #0275d8;
 }
 
 .btn-outline-primary:focus, .btn-outline-primary.focus {
@@ -3158,7 +3153,7 @@ fieldset[disabled] a.btn {
 .btn-lg, .btn-group-lg > .btn {
   padding: 0.75rem 1.5rem;
   font-size: 1.25rem;
-  border-radius: 0rem;
+  border-radius: 0.3rem;
 }
 
 .btn-sm, .btn-group-sm > .btn {
@@ -4502,7 +4497,7 @@ tbody.collapse.show {
           flex-direction: column;
   background-color: #fff;
   border: 1px solid rgba(0, 0, 0, 0.125);
-  /*border-radius: 0.25rem;*/
+  border-radius: 0.25rem;
 }
 
 .card-block {
