--- a/app/views/shared/_side-bar.html.erb
+++ b/app/views/shared/_side-bar.html.erb
@@ -1,12 +1,12 @@
 <ul class="nav flex-column nav-pills">
     <li class="nav-item">
-        <%= link_to "Doctrinal Statement", doctrinalstatement_path, class: "nav-link text-uppercase #{active("/doctrinalstatement")}" %>
+        <%= link_to "Doctrinal Statement", doctrinalstatement_path, class: "nav-link text-uppercase #{"active" if active("/doctrinalstatement")}" %>
     </li>
     <li class="nav-item">
-        <%= link_to "Foreign Languages", "", class: "nav-link text-uppercase disabled #{active("/foreignlanguages")}" %>
+        <%= link_to "Foreign Languages", foreignlanguages_path, class: "nav-link text-uppercase #{"active" if active("/foreignlanguages")}" %>
     </li>
     <li class="nav-item">
-        <%= link_to "Church Directory", churchdirectory_path, class: "nav-link text-uppercase #{active("/churchdirectory")}" %>
+        <%= link_to "Church Directory", churchdirectory_path, class: "nav-link text-uppercase #{"active" if active("/churchdirectory")}" %>
     </li>
     <li class="nav-item">
         <%= link_to "Pictures", "https://get.google.com/albumarchive/117089279522537034856", class: "nav-link text-uppercase", target: "_blank" %>
@@ -18,13 +18,13 @@
         <%= link_to "Hymns", "", class: "nav-link text-uppercase disabled" %>
     </li>
     <li class="nav-item">
-        <%= link_to "Psalms", psalms_path, class: "nav-link text-uppercase #{active("/psalms")}" %>
+        <%= link_to "Psalms", psalms_path, class: "nav-link text-uppercase #{"active" if active("/psalms")}" %>
     </li>
     <li class="nav-item">
-        <%= link_to "Radio", radio_path, class: "nav-link text-uppercase #{active("/radio")}" %>
+        <%= link_to "Radio", radio_path, class: "nav-link text-uppercase #{"active" if active("/radio")}" %>
     </li>
     <li class="nav-item">
-        <%= link_to audiobible_path, class: "nav-link text-uppercase #{active("/audiobible")}" do %>
+        <%= link_to audiobible_path, class: "nav-link text-uppercase #{"active" if active("/audiobible")}" do %>
              Audio Bible <span class="badge badge-warning d-inline-block">NEW</span>
         <% end %>
     </li>
@@ -32,7 +32,7 @@
         <%= link_to "Botswana", "http://www.fwbcbotswana.com", class: "nav-link text-uppercase", target: "_blank" %>
     </li>
     <li class="nav-item">
-        <%= link_to "Malawi", malawi_path, class: "nav-link text-uppercase #{active("/malawi")}" %>
+        <%= link_to "Malawi", malawi_path, class: "nav-link text-uppercase #{"active" if active("/malawi")}" %>
     </li>
     <li class="nav-item">
         <%= link_to "Donate", "http://www.truebornsons.com/donate-to-fwbc", class: "nav-link text-uppercase", target: "_blank" %>
